--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ code {
   border-top-left-radius: 200px ;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
   transition: 0.4s;
-  width: 370px;
+  width: 380px;
   height: 300px;
   text-align: center;
   font-size: 16px;
@@ -86,7 +86,7 @@ code {
 .card2{
   border-top-left-radius: 200px  ;
   border-bottom-right-radius: 200px  ;
-  width: 370px;
+  width: 380px;
   height: 530px;
   margin-bottom: 50px;
   background:#1A1405;
@@ -95,6 +95,15 @@ code {
 
 .art2{
   border-radius:  20px  200px ;
+}
+
+.card8{
+  border-top-left-radius: 200px  ;
+  border-bottom-right-radius: 200px  ;
+  width: 380px;
+  height: 530px;
+  margin-bottom: 50px;
+  background:#1A1405;
 }
 
 
