--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
 
 
 body {
-  background-color: #110C00;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -104,6 +103,11 @@ code {
   height: 530px;
   margin-bottom: 50px;
   background:#1A1405;
+}
+
+
+.hhhdhd{
+   background: linear-gradient(blue, red);
 }
 
 
