--- a/src/index.css
+++ b/src/index.css
@@ -106,8 +106,10 @@ code {
 }
 
 
-.hhhdhd{
-   background: linear-gradient(blue, red);
+.gradient{
+  background: rgba(17, 12, 0, 1);
+  background:linear-gradient(  to top right, rgb(144, 102, 4) ,rgba(17, 12, 0, 1) ,rgba(17, 12, 0, 1) ,rgba(17, 12, 0, 1));
+
 }
 
 
